[package]
name = "headless-16bit-grayscale"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = { path = "../../", default-features = false, features=["glutin-window"] }
log = "0.4"
wasm-bindgen = "0.2"
console_log = "0.1"
